--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ jobs:
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           fetch-depth: 0
-      - name: Checkout repo A
-        uses: actions/checkout@v4
+      - name: Checkout onnxruntime
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           repository: microsoft/onnxruntime
           ref: v1.24.1
@@ -35,11 +35,19 @@ jobs:
       - name: Set up pixi
         uses: prefix-dev/setup-pixi@a0af7a228712d6121d37aba47adf55c1332c9c2e
         with:
-          environments: ${{ matrix.environment }}
+          environments: build default lint
       - name: Build
-        run: pixi run -e ${{ matrix.environment }} debug-build
+        run: |
+          cd onnxruntime-src
+          pwd
+          echo "----------"
+          ls
+          echo "============="
+          pixi run -e build build-debug
       - name: Install
-        run: pixi run -e ${{ matrix.environment }} debug-install
+        run:  |
+          cd onnxruntime-src
+          pixi run -e ${{ matrix.environment }} install-debug
       - name: Test
         run: pixi run -e ${{ matrix.environment }} pytest onnxruntime-src/onnxruntime/test/python/onnxruntime_test_python_mlops.py
         
