--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
+          - ubuntu-latest-arm
           - macos-latest
           - windows-latest
         environment:
