--- a/pixi.toml
+++ b/pixi.toml
@@ -2,7 +2,7 @@
 name = "onnxruntime"
 description = "onnxruntime"
 channels = ["conda-forge"]
-platforms = ["osx-arm64", "linux-64"]
+platforms = ["osx-arm64", "linux-64", "linux-aarch64", "win-64"]
 
 [dependencies]
 python = "*"
