--- a/pixi.toml
+++ b/pixi.toml
@@ -5,7 +5,7 @@ channels = ["conda-forge"]
 platforms = ["osx-arm64", "linux-64", "linux-aarch64", "win-64"]
 
 [dependencies]
-python = "*"
+python-gil = "*"
 setuptools = ">=75.6.0"
 numpy = "*"
 pip = "*"
@@ -42,6 +42,9 @@ lintrunner-run = "lintrunner --all-files"
 onnx = "*"
 pytest = ">=8.4.1,<9"
 
+[feature.py314.dependencies]
+python = "3.14.*"
+
 [feature.build.tasks.build]
 env = { CMAKE_EXPORT_COMPILE_COMMANDS = "1" }
 args = [
@@ -58,5 +61,5 @@ cmd = "python -m pip install build/{{ config }}/dist/onnxruntime*.whl --no-deps 
 
 [environments]
 lint = ["lint"]
-build = {features=["build"], no-default-feature = true}
-test = ["test"]
+default = ["test", "py314"]
+build = {features=["build", "py314"], no-default-feature = true}
