--- a/pixi.toml
+++ b/pixi.toml
@@ -4,13 +4,13 @@ description = "onnxruntime"
 channels = ["conda-forge"]
 platforms = ["osx-arm64", "linux-64", "linux-aarch64", "win-64"]
 
-[dependencies]
-python-gil = "*"
+[feature.test.dependencies]
 setuptools = ">=75.6.0"
 numpy = "*"
 pip = "*"
 sympy = "*"
 pytest = ">=8.4.2,<10"
+onnx = "*"
 
 [feature.build.dependencies]
 cmake = ">=3.30.2"
@@ -23,7 +23,6 @@ c-compiler = ">=1.8.0,<2"
 cxx-compiler = ">=1.8.0,<2"
 libprotobuf = "3.21.*"
 packaging = ">=24.1,<25"
-python = "*"
 setuptools = ">=75.6.0"
 
 [feature.lint.dependencies]
@@ -38,12 +37,8 @@ lintrunner-adapters = ">=0.12.4"
 lintrunner-init = "lintrunner init"
 lintrunner-run = "lintrunner --all-files"
 
-[feature.test.dependencies]
-onnx = "*"
-pytest = ">=8.4.1,<9"
-
 [feature.py314.dependencies]
-python = "3.14.*"
+python-gil = "3.14.*"
 
 [feature.build.tasks.build]
 env = { CMAKE_EXPORT_COMPILE_COMMANDS = "1" }
