--- a/pixi.toml
+++ b/pixi.toml
@@ -48,19 +48,25 @@ args = [
   { "arg" = "src_dir", "default" = "." },
   { "arg" = "config", "default" = "Debug" },
 ]
-cmd = "python {{ src_dir }}/tools/ci_build/build.py --update --build_wheel --enable_pybind --build_dir build --config {{ config }} --build --parallel --compile_no_warning_as_error --skip_pip_install --build_wheel"
+cmd = "python {{ src_dir }}/tools/ci_build/build.py --update --build_wheel --enable_pybind --build_dir build --config {{ config }} --build --parallel --compile_no_warning_as_error --skip_pip_install"
 
 [feature.build.tasks.ctest]
 args = [
   { "arg" = "config", "default" = "Debug" },
 ]
-cmd = "ctest --test-dir build/{{ config }}/"
+cmd = "ctest -c {{ config }} --test-dir build/{{ config }}/"
 
 [tasks.install]
 args = [
   { "arg" = "config", "default" = "Debug" },
 ]
 cmd = "python -m pip install build/{{ config }}/dist/onnxruntime*.whl --no-deps --no-build-isolation"
+[target.win-64.tasks.install]
+# Windows has the config twice in the patch for some reason
+args = [
+  { "arg" = "config", "default" = "Debug" },
+]
+cmd = "python -m pip install build/{{ config }}/{{ config }}/dist/onnxruntime*.whl --no-deps --no-build-isolation"
 
 [environments]
 lint = ["lint"]
