--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,9 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          # - ubuntu-latest
-          # - ubuntu-24.04-arm
-          # - macos-latest
+          - ubuntu-latest
+          - ubuntu-24.04-arm
+          - macos-latest
           - windows-latest
         py-version:
           - "313"
