--- a/pixi.toml
+++ b/pixi.toml
@@ -50,7 +50,14 @@ args = [
   { "arg" = "src_dir", "default" = "." },
   { "arg" = "config", "default" = "Debug" },
 ]
+cmd = "python {{ src_dir }}/tools/ci_build/build.py --update --build_wheel --enable_pybind --build_dir build --config {{ config }} --build --parallel --compile_no_warning_as_error --skip_pip_install"
+[target.win-64.tasks.build]
 # TODO: Windows appears to have memleaks (only check in debug builds)
+env = { CMAKE_EXPORT_COMPILE_COMMANDS = "1" }
+args = [
+  { "arg" = "src_dir", "default" = "." },
+  { "arg" = "config", "default" = "Debug" },
+]
 cmd = "python {{ src_dir }}/tools/ci_build/build.py --update --build_wheel --enable_pybind --build_dir build --config {{ config }} --build --parallel --compile_no_warning_as_error --skip_pip_install --disable_memleak_checker"
 
 [feature.build.tasks.ctest]
