--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,10 +60,10 @@ jobs:
         with:
           environments: build${{ matrix.py-version }} run${{ matrix.py-version }}
       - name: Build
-        run: pixi run -e build${{ matrix.py-version }} build onnxruntime-src
+        run: pixi run -e build${{ matrix.py-version }} build onnxruntime-src Release
       - name: ctests
-        run: pixi run -e build${{ matrix.py-version }} ctest
+        run: pixi run -e build${{ matrix.py-version }} ctest Release
       - name: Install
-        run: pixi run -e run${{ matrix.py-version }} install
+        run: pixi run -e run${{ matrix.py-version }} install Release
       - name: Test
         run: pixi run -e run${{ matrix.py-version }} pytest onnxruntime-src/onnxruntime/test/python/onnxruntime_test_python_mlops.py
