--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
   push:
-  on: pull_request
+  pull_request:
   workflow_dispatch:
   schedule:
      - cron: "0 0 * * *"  # run daily at midnight
